Added device choice to web page Reworked web page design Added connection data (if link is possible) to web page(bitrate, loss, offsets) Update openapi specification Added and changed necessary files from https://github.com/AdvancedNetworkingSystems/TerrainAnalysis/tree/master/cntg Removed custom leaflet-elevation
